# Spectrum

./: .gitignore  CMakeLists.txt  README.md
core/: spectrum.c  spectrum.h
data/shaders/: default_vert.spv  forward_frag.spv  uniform_vert.spv
filesystem/: obj.h
math/: mat4.h  vec3.h  vec4.h
renderer/vulkan/: spectrum_vulkan.c  spectrum_vulkan.h
